# MyProjects

./: README.md
ArthmeticFormatter/: formatter.py
BankAccount/: CMakeLists.txt
BankAccount/include/accounts/: AccountManager.hpp  CheckingAccount.hpp  SavingsAccount.hpp
BankAccount/include/utils/: Utils.hpp
BankAccount/src/: CMakeLists.txt
BankAccount/src/accounts/: AccountManager.cpp  BankAccount.cpp  CMakeLists.txt  CheckingAccount.cpp  SavingsAccount.cpp
BankAccount/src/app/: main.cpp
BankAccount/src/utils/: CMakeLists.txt  Utils.cpp
BankAccount/test/: AccountManagerTests.cpp  BankAccountTests.cpp  CMakeLists.txt  CheckingAccountTests.cpp  SavingsAccountTests.cpp
FlagFinder/: app.py
FlagFinder/static/: style.css
FlagFinder/template/: home.html
MyPortfolio/: app.py
MyPortfolio/static/: script.js  style.css
MyPortfolio/templates/: about.html  contact.html  home.html  resume.html
SmallProjects/: README.md
SmallProjects/AreaCalculator/: area.py
SmallProjects/BudgetApp/: app.py
SmallProjects/ProbabilityCalculator/: probability.py
SmallProjects/TimeCalculator/: calculator.py
my_assessment_app/: hello.py  preswald.toml
